Fixes some text align bugs

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -42,6 +42,7 @@
     align-items: center;
 
     font-family: Peleja;
+    text-align: center;
 }
 
 .Card-description {
@@ -66,6 +67,6 @@
     border-left: none;
 }
 
-#Event-4 {
+#Event-5 {
     border-bottom: none;
 }
